# SUPER_DRONE

./: .gitignore  AGENTS.md  README.md
docs/: obstacle_course_validation.md  rosbag_replay_test.md
mars_uav_sim/mars_quadrotor_msgs/msg/: Px4ctrlDebug.msg
mars_uav_sim/mars_quadrotor_msgs/ros/: ros1.CMakeLists.txt  ros1.package.xml
mission_planner/: CMakeLists.txt  package.xml
mission_planner/Apps/: gazebo_cloud_bridge.cpp  obstacle_course_validator.cpp  ros1_goal_feeder.cpp
mission_planner/include/waypoint_mission/: super_drone_config.hpp
mission_planner/launch/: gazebo_obstacle_course.launch  rosbag_replay_test.launch  super_drone_realflight.launch
mission_planner/rviz/: gazebo_obstacle_course.rviz
mission_planner/worlds/: obstacle_course.world
realflight_modules/mid360_fastlio/FAST_LIO/: package.xml
realflight_modules/mid360_fastlio/FAST_LIO/include/: livox_msg_compat.hpp
realflight_modules/mid360_fastlio/FAST_LIO/src/: laserMapping.cpp  preprocess.h
realflight_modules/mid360_fastlio/livox_ros_driver2/: CMakeLists.txt  package.xml
scripts/: pub_planning_goal.sh  run_obstacle_course_validation.sh
